--- a/codepipeline-hugo-site/template.yaml
+++ b/codepipeline-hugo-site/template.yaml
@@ -76,7 +76,7 @@ Resources:
       ServiceRole: !GetAtt 'Role.Arn'
       Source:
         Type: CODEPIPELINE
-        BuildSpec: 'buildspec.yaml'
+        BuildSpec: 'docker-ecr-buildspec.yaml'
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
         Image: aws/codebuild/standard:1.0
